Paramétrage du pas de planning
